--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,38 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+  box-sizing: border-box;
+}
+
 .vertical-center {
-    align-items: center;
+    align-items: center; 
     display: flex;
 }
+
+.div-vertical-center {
+    align-items: center; 
+    display: flex;
+    justify-content: center;
+}
+
+@media only screen and (min-width: 576px) {
+    .border-between > [class*='col-']:before {
+        background: #e3e3e3;
+        bottom: 0;
+        content: " ";
+        left: 0;
+        position: absolute;
+        width: 1px;
+        top: 0;
+     }
+     
+     .border-between > [class*='col-']:first-child:before {
+        display: none;
+     }
+}
+
+@media only screen and (max-width: 576px) {
+    .col-margin {
+        margin-top: 15px;
+    }
+}
+
