--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -3,22 +3,22 @@
   <!-- Nav tabs -->
   <ul class="nav nav-tabs d-flex text-center">
     <li class="nav-item flex-fill">
-      <a class="nav-link active" data-toggle="tab" href="#home">To Do's</a>
+      <a class="nav-link active" data-toggle="tab" href="#todos">To Do's</a>
     </li>
     <li class="nav-item flex-fill">
-      <a class="nav-link" data-toggle="tab" href="#menu1">Continues</a>
+      <a class="nav-link" data-toggle="tab" href="#continue">Continues</a>
     </li>
     <li class="nav-item flex-fill">
-      <a class="nav-link" data-toggle="tab" href="#menu2">Pending</a>
+      <a class="nav-link" data-toggle="tab" href="#pending">Pending</a>
     </li>
     <li class="nav-item flex-fill">
-      <a class="nav-link" data-toggle="tab" href="#menu3">Completed</a>
+      <a class="nav-link" data-toggle="tab" href="#completed">Completed</a>
     </li>
   </ul>
 
   <!-- Tab panes -->
   <div class="tab-content">
-    <div id="home" class="container tab-pane active">
+    <div id="todos" class="container tab-pane active">
       <div class="row" style="margin-top:10px; border: 1px solid grey; border-radius: 15px;"> 
         <div class="col-sm-11" style="padding:10px">
           <p style="margin-bottom: 5px">Society Name</p>
@@ -44,7 +44,7 @@
             </div>
           </div> 
            
-          <div (click)="startSurvey()"class="col-sm-1 d-flex justify-content-center" style="border-bottom-right-radius: 15px; border-top-right-radius: 15px; background: red; align-items: center;">
+          <div (click)="startSurvey(67)"class="col-sm-1 d-flex justify-content-center" style="border-bottom-right-radius: 15px; border-top-right-radius: 15px; background: red; align-items: center;">
             Start
           </div>
          
@@ -64,12 +64,16 @@
             </div>
           </div>
     </div>
-    <div id="menu1" class="container tab-pane fade"><br>
-      <h3>Menu 1</h3>
+    <div id="continue" class="container tab-pane fade"><br>
+      <h3>Continue</h3>
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
     </div>
-    <div id="menu2" class="container tab-pane fade"><br>
-      <h3>Menu 2</h3>
+    <div id="pending" class="container tab-pane fade"><br>
+      <h3>Pending</h3>
+      <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+    </div>
+    <div id="completed" class="container tab-pane fade"><br>
+      <h3>completed</h3>
       <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
     </div>
   </div>
