--- a/src/app/meter-by-floor/meter-by-floor.component.css
+++ b/src/app/meter-by-floor/meter-by-floor.component.css
@@ -1,3 +1,4 @@
+/*Switch Button */
 .switch {
     position: relative;
     display: inline-block;
@@ -57,4 +58,21 @@
   
   .slider.round:before {
     border-radius: 50%;
+  }
+
+  /*Switch Button */
+  .table td, .table th {
+    padding: 5px;
+  }
+
+  .btn-close {
+    position: absolute;
+    right: 12px;
+    background: red;
+    border-radius: 50%;
+    height: 16px;
+    width: 16px;
+    font-size: 12px;
+    color:white !important;
+    z-index: 1;
   }
