--- a/src/app/society-details/society-details.component.html
+++ b/src/app/society-details/society-details.component.html
@@ -3,126 +3,105 @@
   <div class="row">
     <div class="col-sm-6 mt-3">
       <div class="card" style="border-radius: 15px; height: 100%">
-          <div class="card-header card-header-bg-todo">Society Detail</div>
-          <div class="card-body"> 
-                <div class="form-group">
-                  <label for="sname">Society Name:</label> 
-                  <input type="text" class="form-control" id="sname" placeholder="Enter Society Name" name="sname" required>
-                  <div class="valid-feedback">Valid.</div>
-                  <div class="invalid-feedback">Please fill out this field.</div> 
-                </div>
-                <div class="form-group">
-                  <label for="address">Address:</label> 
-                  <textarea class="form-control" id="address" placeholder="Enter Address" name="address" required></textarea>
-                  <div class="valid-feedback">Valid.</div>
-                  <div class="invalid-feedback">Please fill out this field.</div>
-                </div>
-                <div class="form-group">
-                  <label for="pincode">Pin Code:</label> 
-                  <input type="text" class="form-control" id="pincode" placeholder="Enter Pin Code" name="pincode" required>
-                  <div class="valid-feedback">Valid.</div>
-                  <div class="invalid-feedback">Please fill out this field.</div> 
-                </div>
-                <div class="form-group row">
-                  <div class="col-sm-6">
-                    <label for="city">City:</label> 
-                    <select class="form-control" id="city" placeholder="Enter City" name="city" required>
-                      <option>Hello</option>
-                    </select>
-                    <div class="valid-feedback">Valid.</div>
-                    <div class="invalid-feedback">Please fill out this field.</div>
-                  </div> 
-                  <div class="col-sm-6">
-                    <label for="pwd">State:</label> 
-                    <select class="form-control" id="pwd" placeholder="Enter State" name="state" required>
-                      <option>Hello</option>
-                    </select>
-                    <div class="valid-feedback">Valid.</div>
-                    <div class="invalid-feedback">Please fill out this field.</div>
-                  </div> 
-                </div>
+        <div class="card-header card-header-bg-todo">Society Detail</div>
+        <div class="card-body">
+          <div class="form-group">
+            <label for="sname">Society Name:</label>
+            <input type="text" class="form-control" id="sname" [(ngModel)]="societyDetails.name"
+              placeholder="Enter Society Name" name="societyDetails.name" required>
           </div>
+          <div class="form-group">
+            <label for="address">Address:</label>
+            <textarea class="form-control" id="address" placeholder="Enter Address" [(ngModel)]="societyDetails.address"
+              name="societyDetails.address" required></textarea>
+          </div>
+          <div class="form-group">
+            <label for="pincode">Pin Code:</label>
+            <input type="number" class="form-control" id="pincode" min="0" [(ngModel)]="societyDetails.pincode"
+              placeholder="Enter Pin Code" name="societyDetails.pincode" required>
+          </div>
+          <div class="form-group row">
+            <div class="col-sm-6">
+              <label for="city">City:</label>
+              <select class="form-control" id="city" [(ngModel)]="societyDetails.city" placeholder="Enter City"
+                name="societyDetails.city" required>
+                <option *ngFor="let city of listOfCities" [value]="city.name">{{city.name}}</option>
+              </select>
+            </div>
+            <div class="col-sm-6">
+              <label for="state">State:</label>
+              <select class="form-control" id="state" [(ngModel)]="societyDetails.state" placeholder="Enter State"
+                name="societyDetails.state" required>
+                <option *ngFor="let state of listOfStates" [value]="state.name">{{state.name}}</option>
+              </select>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <div class="col-sm-6 mt-3">
       <div class="card" style="border-radius: 15px; height: 100%">
-          <div class="card-header card-header-bg-todo">Contact Detail</div>
-          <div class="card-body">
-             
-                      
-                <div class="form-group">
-                  <label for="fmname">FM Name:</label> 
-                  <input type="text" class="form-control" id="fmname" placeholder="Enter FM Name" name="fmname" required>
-                  <div class="valid-feedback">Valid.</div>
-                  <div class="invalid-feedback">Please fill out this field.</div> 
-                </div>
-               
-               
-                <div class="form-group">
-                  <label for="fmname">FM Phone:</label> 
-                  <input type="text" class="form-control" id="fmname" placeholder="Enter FM Name" name="fmname" required>
-                  <div class="valid-feedback">Valid.</div>
-                  <div class="invalid-feedback">Please fill out this field.</div> 
-                </div> 
-            
-             
-                         
-                <div class="form-group">
-                  <label for="fmname">Plumber Name:</label> 
-                  <input type="text" class="form-control" id="fmname" placeholder="Enter FM Name" name="fmname" required>
-                  <div class="valid-feedback">Valid.</div>
-                  <div class="invalid-feedback">Please fill out this field.</div> 
-                </div>
-               
-                <div class="form-group">
-                  <label for="fmname">Plumber Phone:</label> 
-                  <input type="text" class="form-control" id="fmname" placeholder="Enter FM Name" name="fmname" required>
-                  <div class="valid-feedback">Valid.</div>
-                  <div class="invalid-feedback">Please fill out this field.</div> 
-                </div>
-               
-             
-          </div>  
-      </div>  
+        <div class="card-header card-header-bg-todo">Contact Detail</div>
+        <div class="card-body">
+          <div class="form-group">
+            <label for="fmName">FM Name:</label>
+            <input type="text" class="form-control" id="fmname" placeholder="Enter FM Name"
+              [(ngModel)]="societyDetails.fmName" name="societyDetails.fmName" required>
+          </div>
+          <div class="form-group">
+            <label for="fmPhone">FM Phone:</label>
+            <input type="number" class="form-control" id="fmPhone" placeholder="Enter FM Phone"
+              [(ngModel)]="societyDetails.fmPhone" name="societyDetails.fmPhone" required>
+          </div>
+          <div class="form-group">
+            <label for="plmbrName">Plumber Name:</label>
+            <input type="text" class="form-control" id="plmbrName" placeholder="Enter Plumber Name"
+              [(ngModel)]="societyDetails.plmbrName" name="plmbrName" required>
+          </div>
+
+          <div class="form-group">
+            <label for="plmbrPhone">Plumber Phone:</label>
+            <input type="number" class="form-control" id="fmname" placeholder="Enter Plumber Phone"
+              [(ngModel)]="societyDetails.plmbrPhone" name="plmbrPhone" required>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
   <div class="row">
     <div class="col-sm-12 mt-3">
-        <div class="card" style="border-radius: 15px;">
-            <div class="card-header card-header-bg-todo">Info</div>
-            <div class="card-body">
-                <div class="form-row">
-                    <div class="col-6">          
-                      <div class="form-group">
-                        <label for="fmname">Total Tower:</label> 
-                        <input type="number" class="form-control" id="fmname" placeholder="Enter FM Name" name="fmname" required>
-                        <div class="valid-feedback">Valid.</div>
-                        <div class="invalid-feedback">Please fill out this field.</div> 
-                      </div>
-                    </div>
-                    <div class="col-6">
-                      <div class="form-group">
-                        <label for="fmname">Total Number Of Apartments:</label> 
-                        <input type="number" class="form-control" id="fmname" placeholder="Enter FM Name" name="fmname" required>
-                        <div class="valid-feedback">Valid.</div>
-                        <div class="invalid-feedback">Please fill out this field.</div> 
-                      </div>
-                    </div>
-                </div>
-                <div class="form-row">
-                    <div class="col-6">
-                      <div class="form-group">
-                        <label for="fmname">Survey Raised For Number Of Tower:</label> 
-                        <input type="number" class="form-control" id="fmname" placeholder="Enter FM Name" name="fmname" required>
-                        <div class="valid-feedback">Valid.</div>
-                        <div class="invalid-feedback">Please fill out this field.</div> 
-                      </div>
-                    </div>
-                </div>
-            </div>  
+      <div class="card" style="border-radius: 15px;">
+        <div class="card-header card-header-bg-todo">Info</div>
+        <div class="card-body">
+          <div class="form-row">
+            <div class="col-6">
+              <div class="form-group">
+                <label for="noOfTowers">Total No. Of Tower:</label>
+                <input type="number" class="form-control" id="noOfTowers" placeholder="Enter FM Name"
+                  [(ngModel)]="societyDetails.noOfTowers" name="noOfTowers" required>
+              </div>
+            </div>
+            <div class="col-6">
+              <div class="form-group">
+                <label for="noOfApts">Total No. Of Apartments:</label>
+                <input type="number" class="form-control" id="noOfApts" placeholder="Enter FM Name"
+                  [(ngModel)]="societyDetails.noOfApts" name="noOfApts" required>
+              </div>
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="col-6">
+              <div class="form-group">
+                <label for="noOfTowersForSurvey">Survey Raised For Number Of Tower:</label>
+                <input type="number" class="form-control" id="noOfTowersForSurvey" placeholder="Enter FM Name"
+                  [(ngModel)]="societyDetails.noOfTowersForSurvey" name="noOfTowersForSurvey" required>
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
-  </div> 
+  </div>
 </div>
 <div class="row mt-3 p-2 w-100" style="background: whitesmoke; bottom: 0px; margin:0px">
   <div class="container">
