--- a/src/app/society-details/society-details.component.html
+++ b/src/app/society-details/society-details.component.html
@@ -103,9 +103,4 @@
     </div>
   </div>
 </div>
-<div class="row mt-3 p-2 w-100" style="background: whitesmoke; bottom: 0px; margin:0px">
-  <div class="container">
-    <button class="btn btn-sm btn-outline-info">Previous</button>
-    <button class="btn btn-sm btn-outline-info float-right">Save & Next</button>
-  </div>
-</div>
+<app-prev-next></app-prev-next>
