--- a/src/app/meter-by-floor/meter-by-floor.component.html
+++ b/src/app/meter-by-floor/meter-by-floor.component.html
@@ -11,7 +11,7 @@
                 <div class="form-row">
                   <div class="col-sm-5 col-xs-12">
                     <label for="from">From:</label>
-                    <input type="number" class="form-control" [(ngModel)]="flatGrp.from" disabled> 
+                    <input type="number" class="form-control" [(ngModel)]="flatGrp.from" name="from" disabled> 
                   </div>
                   <div class="col-sm-2 div-vertical-center">
                     ------
@@ -19,7 +19,7 @@
                   <div class="col-sm-5 col-xs-12">
                     <label for="to">To:</label>
                     <select class="form-control" id="to" [(ngModel)]="flatGrp.to" (ngModelChange)="onFlatGroupChange()" name="to" required>
-                      <option *ngFor="let f of chooseFlatArray" [value]="f">{{f}}</option>
+                      <option *ngFor="let f of chooseFlatArray" [value]="(f)">{{f}}</option>
                     </select>
                   </div>
                 </div>
