Changes in list api incorporated

--- a/src/app/step-nav/step-nav.component.html
+++ b/src/app/step-nav/step-nav.component.html
@@ -12,7 +12,7 @@
           <a class="nav-item nav-link" routerLink="/soc/{{trackerId}}/tower/1/ystrainer">Y - Stainer</a>
         </div>
         <div class="navbar-nav flex-column">
-            <a class="nav-item nav-link" routerLink="/page1">Scaffolding & Civil Work</a>
+            <a class="nav-item nav-link" routerLink="/soc/{{trackerId}}/tower/1/scaffolding&civil">Scaffolding & Civil Work</a>
         </div>
         <div class="navbar-nav flex-column">
             <a class="nav-item nav-link" routerLink="/page1">Common & Supply</a>
